--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <meta charset=UTF-8>
-    <title>Angular2 Modal</title>
-    <base href="/">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Ng2ModalDev</title>
+  <base href="/">
 
-    <main-app>
-      Loading...
-    </main-app>
-
-    <script src="polyfills.bundle.js"></script>
-    <script src="vendor.bundle.js"></script>
-    <script src="app.bundle.js"></script>
-
-  </body>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+  <app-root>Loading...</app-root>
+</body>
 </html>
